# falcon-worker-python

./: Makefile  README.md  TODO.md  pyproject.toml
proto/: frame.proto  incident.proto
worker/: __init__.py  __main__.py  consumers.py  schemas.py  settings.py
worker/repo/: base.py  cassandra.py  factory.py  jetstream.py  mocks.py
