[project]
name = "falcon-worker"
version = "0.1.0"
description = "Falcon Worker handles reading data from sensors and facilitates incidence response."
authors = [
    {name = "Samuel Abolo",email = "sabolo@tripadvisor.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nats-py (>=2.10.0,<3.0.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "acsylla (>=1.0.0,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "protobuf (>=6.31.1,<7.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]

package-mode = false


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.2"
mypy = "^1.16.1"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
